entity_macros/tests/ui/derive/ent/generic-field-is-not-cloneable.stderr
error[E0277]: the trait bound `T: Clone` is not satisfied
  --> $DIR/generic-field-is-not-cloneable.rs:3:17
   |
3  | #[derive(Clone, Ent)]
   |                 ^^^ the trait `Clone` is not implemented for `T`
   |
  ::: $WORKSPACE/entity/src/ent/mod.rs
   |
   | pub trait Ent: AsAny + DynClone {
   |                        -------- required by this bound in `Ent`
   |
   = note: required because of the requirements on the impl of `Clone` for `TestEnt<T>`
   = note: required because of the requirements on the impl of `dyn_clone::DynClone` for `TestEnt<T>`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
   |
4  | struct TestEnt<T: Clone> {
   |                 ^^^^^^^

error[E0277]: the trait bound `Value: From<T>` is not satisfied
    --> $DIR/generic-field-is-not-cloneable.rs:3:17
     |
3    | #[derive(Clone, Ent)]
     |                 ^^^ the trait `From<T>` is not implemented for `Value`
     |
    ::: $WORKSPACE/entity/src/ent/query/predicate.rs
     |
     | pub struct TypedPredicate<T: Into<Value>>(Predicate, PhantomData<T>);
     |                              ----------- required by this bound in `TypedPredicate`
     |
     = note: required because of the requirements on the impl of `Into<Value>` for `T`
     = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
